# sdk-nrf

applications/asset_tracker_v2/: CMakeLists.txt  Kconfig  overlay-ext-gps.conf  overlay-low-power.conf  prj.conf
applications/asset_tracker_v2/boards/: thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay
applications/asset_tracker_v2/src/: main.c
applications/asset_tracker_v2/src/cloud/: CMakeLists.txt  cloud_wrapper.h  nrf_cloud_integration.c
applications/asset_tracker_v2/src/cloud/cloud_codec/: CMakeLists.txt  Kconfig  cloud_codec.h  cloud_codec_ringbuffer.c  json_protocol_names.h
applications/asset_tracker_v2/src/cloud/cloud_codec/nrf_cloud/: json_protocol_names_nrf_cloud.h  nrf_cloud_codec.c
applications/asset_tracker_v2/src/events/: CMakeLists.txt  cloud_module_event.h  data_module_event.c  data_module_event.h  debug_module_event.c  debug_module_event.h  sensor_module_event.c  sensor_module_event.h
applications/asset_tracker_v2/src/ext_sensors/: CMakeLists.txt  ext_sensors.c  ext_sensors.h
applications/asset_tracker_v2/src/modules/: CMakeLists.txt  Kconfig.cloud_module  Kconfig.data_module  Kconfig.debug_module  Kconfig.location_module  Kconfig.sensor_module  cloud_module.c  data_module.c  debug_module.c  location_module.c  modem_module.c  sensor_module.c  ui_module.c
